# ai-sidekick

./: README.md  config.yaml  init.lua  pyproject.toml
config/: codex_web_panel.yaml
docs/: ai-text-tools.md  codex-nl-shell-shortcut.md  development.md  slack-codex-workflow.md
docs/presentations/: codex-nl-shell.md
prompts/: ask.md  commands.md  email.md  general.md  slack.md
scripts/: README.md  __init__.py  build_macos_icon.sh  codex_nl_shell_sidekick.sh  codex_web_panel_config_json.sh  common_env.sh  debug_agent.py  demo_codex_nl_shell_shortcut.sh  open_web_panel.sh  run_app.sh  run_web_panel.sh  start_web_panel_daemon.sh  test_app.sh  toggle_web_panel.sh
scripts/demo/: codex-nl-shell-demo.sh
scripts/dev/: __init__.py  icon-build.sh  icon_mask.py  sidekick-submit-text.sh  web-panel-dev.sh
scripts/internal/: config-json.sh  env.sh  panel-show.sh  panel-toggle.sh
skills/: AGENTS.md
skills/gbu-jira/: SKILL.md
skills/proofread-email/: SKILL.md
skills/refresh-llms/: SKILL.md
slack_codex_workflow/: README.md
slack_codex_workflow/config/: source_resolver_cache.json
slack_codex_workflow/hammerspoon/: slack_codex_workflow.lua
tests/: test_agent_routing.py  test_codex_bridge_config.py  test_codex_bridge_notifications.py  test_codex_bridge_protocol.py  test_codex_bridge_service.py  test_codex_bridge_state.py  test_debug_agent.py  test_hammerspoon_ai_tools_contract.py  test_ingress_server.py  test_sidekick_submit.py  test_slack_codex_workflow_contract.py  test_web_panel_app.py  test_web_panel_static.py  test_web_panel_ui_bridge.py
(+30 files in other folders)
